VCR cassette update to remove private credentials

--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_for_author/for_author_with_first_name_last_name_only/doesn_t_use_the_client_query_by_email_or_seed_method.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_for_author/for_author_with_first_name_last_name_only/doesn_t_use_the_client_query_by_email_or_seed_method.yml
@@ -48,7 +48,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
@@ -101,7 +101,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
