--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_from_directory_of_wos_id_files/processes_only_bibtex_items_of_type_inproceedings.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_from_directory_of_wos_id_files/processes_only_bibtex_items_of_type_inproceedings.yml
@@ -39,7 +39,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
@@ -92,7 +92,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
