--- a/fixtures/vcr_cassettes/doi_search_manual_doi_local.yml
+++ b/fixtures/vcr_cassettes/doi_search_manual_doi_local.yml
@@ -20,7 +20,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -71,7 +71,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
