--- a/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
@@ -21,7 +21,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -72,7 +72,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
