--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
@@ -37,7 +37,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -90,7 +90,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
