--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/filters_out_batch/manual_pubs_from_the_resultset_if_SW/pubmed_records_were_found.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/filters_out_batch/manual_pubs_from_the_resultset_if_SW/pubmed_records_were_found.yml
@@ -37,7 +37,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -90,7 +90,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
