--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/searches_for_a_local_Publication_by_pmid_and_returns_a_pubhash.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/searches_for_a_local_Publication_by_pmid_and_returns_a_pubhash.yml
@@ -37,7 +37,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -90,7 +90,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
