--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_harvest_for_author.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_harvest_for_author.yml
@@ -16,7 +16,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
