--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_pubmed_pub/does_not_create_duplicate_publication.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_pubmed_pub/does_not_create_duplicate_publication.yml
@@ -16,7 +16,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
