--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_no_existing_publication/adds_new_publications.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_no_existing_publication/adds_new_publications.yml
@@ -16,7 +16,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
