--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_doi/does_not_query_sciencewire_if_there_is_an_existing_publication_with_the_doi.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_doi/does_not_query_sciencewire_if_there_is_an_existing_publication_with_the_doi.yml
@@ -34,7 +34,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -87,7 +87,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
