--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_title_/returns_bibjson/with_metadata_section.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_title_/returns_bibjson/with_metadata_section.yml
@@ -38,7 +38,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -91,7 +91,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
