--- a/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_cap_profile_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_PubMed_publication/adds_proper_identifiers_section.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_cap_profile_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_PubMed_publication/adds_proper_identifiers_section.yml
@@ -37,7 +37,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -90,7 +90,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
