--- a/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_sul_author_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_ScienceWire_publication/adds_new_ScienceWire_publication_with_proper_identifiers_section.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_sul_author_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_ScienceWire_publication/adds_new_ScienceWire_publication_with_proper_identifiers_section.yml
@@ -16,7 +16,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
