--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_list_of_4.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_list_of_4.yml
@@ -32,7 +32,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -83,7 +83,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
