--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
@@ -19,7 +19,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -82,7 +82,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
