--- a/fixtures/vcr_cassettes/sciencewire_client_spec_searches_journals_and_proceedings.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_searches_journals_and_proceedings.yml
@@ -19,7 +19,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
@@ -268,7 +268,7 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - ***REMOVED***
+      - some-license-id
       Host:
       - stg.sciencewirerest.discoverylogic.com
       Connection:
