need to ERB evail the SQUASH.DISABLED flag

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -24,4 +24,4 @@ SCIENCEWIRE:
 SQUASH:
   API_HOST: http://squash-host.example.com
   API_KEY: squash-api-key
-  DISABLED: (Rails.env.development? || Rails.env.test?)
+  DISABLED: <%= (Rails.env.development? || Rails.env.test?) %>
