update cassettes with new private info

--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
@@ -37,9 +37,9 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
       Expect:
@@ -90,9 +90,9 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
