--- a/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_cap_profile_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_ScienceWire_publication/adds_new_ScienceWire_publication.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_cap_profile_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_ScienceWire_publication/adds_new_ScienceWire_publication.yml
@@ -16,9 +16,9 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
