--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_pubmed_pub/does_not_create_duplicate_contributions.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_pubmed_pub/does_not_create_duplicate_contributions.yml
@@ -16,7 +16,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
@@ -121,7 +121,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - sciencewirerest.discoverylogic.com
       Connection:
