--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_title_/with_maxrows_number_of_records.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_title_/with_maxrows_number_of_records.yml
@@ -38,9 +38,9 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
       Expect:
@@ -91,9 +91,9 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
