--- a/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
@@ -21,9 +21,9 @@ http_interactions:
       User-Agent:
       - Ruby
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
       Expect:
@@ -72,9 +72,9 @@ http_interactions:
       Content-Type:
       - text/xml
       Licenseid:
-      - some-license-id
+      - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - stg.sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
