--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_for_author/for_author_with_first_name_last_name_only/uses_the_client_query_by_name_method.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_for_author/for_author_with_first_name_last_name_only/uses_the_client_query_by_name_method.yml
@@ -50,7 +50,7 @@ http_interactions:
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
       Expect:
@@ -75,7 +75,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 28 Mar 2016 21:55:57 GMT
+      - Tue, 05 Apr 2016 23:39:39 GMT
       Content-Length:
       - '278'
     body:
@@ -84,7 +84,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>111021</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:55:57 GMT
+  recorded_at: Tue, 05 Apr 2016 23:39:39 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/111021?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -103,7 +103,7 @@ http_interactions:
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
@@ -124,7 +124,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 28 Mar 2016 21:55:57 GMT
+      - Tue, 05 Apr 2016 23:39:39 GMT
       Content-Length:
       - '148'
     body:
@@ -132,5 +132,5 @@ http_interactions:
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:55:57 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Tue, 05 Apr 2016 23:39:39 GMT
+recorded_with: VCR 3.0.1
