--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_harvest_for_author.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_harvest_for_author.yml
@@ -18,7 +18,7 @@ http_interactions:
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
@@ -39,7 +39,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 28 Mar 2016 21:56:14 GMT
+      - Tue, 05 Apr 2016 23:39:19 GMT
       Content-Length:
       - '1208'
     body:
@@ -58,7 +58,7 @@ http_interactions:
         \ <h3>There is a problem with the resource you are looking for, and it cannot
         be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:15 GMT
+  recorded_at: Tue, 05 Apr 2016 23:39:19 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -78,7 +78,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 28 Mar 2016 21:56:15 GMT
+      - Tue, 05 Apr 2016 23:39:20 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -86,12 +86,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BF466D6F9A87F1_0264SID
+      - 9DFD48C87044CA81_0029SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BF466D6F9A87F1_0264SID; domain=.nih.gov; path=/; expires=Tue, 28
-        Mar 2017 21:56:15 GMT
+      - ncbi_sid=9DFD48C87044CA81_0029SID; domain=.nih.gov; path=/; expires=Wed, 05
+        Apr 2017 23:39:20 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -104,5 +104,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:15 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Tue, 05 Apr 2016 23:39:20 GMT
+recorded_with: VCR 3.0.1
