--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_sciencewire_pub/adds_to_contributions_for_existing_publication.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_sciencewire_pub/adds_to_contributions_for_existing_publication.yml
@@ -18,7 +18,7 @@ http_interactions:
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
@@ -39,7 +39,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 28 Mar 2016 21:56:23 GMT
+      - Tue, 05 Apr 2016 23:39:27 GMT
       Content-Length:
       - '1208'
     body:
@@ -58,7 +58,7 @@ http_interactions:
         \ <h3>There is a problem with the resource you are looking for, and it cannot
         be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:23 GMT
+  recorded_at: Tue, 05 Apr 2016 23:39:27 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -78,7 +78,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 28 Mar 2016 21:56:23 GMT
+      - Tue, 05 Apr 2016 23:39:27 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -86,12 +86,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BE51B86F9A8871_0045SID
+      - 08DE37E67044CAF1_0200SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BE51B86F9A8871_0045SID; domain=.nih.gov; path=/; expires=Tue, 28
-        Mar 2017 21:56:23 GMT
+      - ncbi_sid=08DE37E67044CAF1_0200SID; domain=.nih.gov; path=/; expires=Wed, 05
+        Apr 2017 23:39:27 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -104,5 +104,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:23 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Tue, 05 Apr 2016 23:39:27 GMT
+recorded_with: VCR 3.0.1
