--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/does_not_create_empty_values_in_the_pub_hash_for_pmid_or_an_empty_PMID_identifier.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/does_not_create_empty_values_in_the_pub_hash_for_pmid_or_an_empty_PMID_identifier.yml
@@ -41,7 +41,7 @@ http_interactions:
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
       Expect:
@@ -66,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 28 Mar 2016 21:56:00 GMT
+      - Tue, 05 Apr 2016 23:39:14 GMT
       Content-Length:
       - '277'
     body:
@@ -75,7 +75,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>82248</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:00 GMT
+  recorded_at: Tue, 05 Apr 2016 23:39:14 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82248?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -94,7 +94,7 @@ http_interactions:
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
-      - sciencewirerest.discoverylogic.com
+      - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
   response:
@@ -115,7 +115,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 28 Mar 2016 21:56:00 GMT
+      - Tue, 05 Apr 2016 23:39:14 GMT
       Content-Length:
       - '3567'
     body:
@@ -160,7 +160,7 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,5|2,0,5</AuthorCitationCountList>\r\n    <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:01 GMT
+  recorded_at: Tue, 05 Apr 2016 23:39:15 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -180,7 +180,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 28 Mar 2016 21:56:01 GMT
+      - Tue, 05 Apr 2016 23:39:15 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -188,12 +188,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BF17A66F9A8711_0854SID
+      - 08DD1CD77044CA31_0130SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BF17A66F9A8711_0854SID; domain=.nih.gov; path=/; expires=Tue, 28
-        Mar 2017 21:56:01 GMT
+      - ncbi_sid=08DD1CD77044CA31_0130SID; domain=.nih.gov; path=/; expires=Wed, 05
+        Apr 2017 23:39:15 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -206,5 +206,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Mon, 28 Mar 2016 21:56:01 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Tue, 05 Apr 2016 23:39:15 GMT
+recorded_with: VCR 3.0.1
