--- a/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
@@ -4,11 +4,13 @@ http_interactions:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
-      encoding: US-ASCII
-      string: ! '&id=233333333333333&id=45555666666666'
+      encoding: UTF-8
+      string: "&id=233333333333333&id=45555666666666"
     headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -17,37 +19,32 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 07 Mar 2016 22:19:20 GMT
+      - Tue, 05 Apr 2016 23:38:11 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BE4EAD6DDFE681_0131SID
+      - 9DFC70067044C631_0734SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BE4EAD6DDFE681_0131SID; domain=.nih.gov; path=/; expires=Tue, 07
-        Mar 2017 22:19:20 GMT
+      - ncbi_sid=9DFC70067044C631_0734SID; domain=.nih.gov; path=/; expires=Wed, 05
+        Apr 2017 23:38:11 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
       - chunked
     body:
-      encoding: US-ASCII
-      string: ! '<?xml version="1.0"?>
-
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January
-        2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
-
+      encoding: UTF-8
+      string: |
+        <?xml version="1.0"?>
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
         <PubmedArticleSet>
 
-
         </PubmedArticleSet>
-
-'
     http_version: 
-  recorded_at: Mon, 07 Mar 2016 22:19:20 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Tue, 05 Apr 2016 23:38:11 GMT
+recorded_with: VCR 3.0.1
