ignore *.local.rb private factories

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ README_configs.txt
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+## Private seed data
+spec/factories/*.local.rb
